[gd_scene load_steps=9 format=3 uid="uid://dkv51fcanfo0r"]

[ext_resource type="Script" path="res://Objects/CrisisHandler/crisis_handler.gd" id="1_h1dux"]
[ext_resource type="Script" path="res://Objects/Main/camera_2d.gd" id="2_65ngm"]
[ext_resource type="AudioStream" uid="uid://wfldvutwd6wk" path="res://Assets/Sounds/Arcade Explosion.wav" id="3_iafhy"]
[ext_resource type="AudioStream" uid="uid://cwcyikhxgh72g" path="res://Assets/Sounds/Alarm Sound.wav" id="4_q55hf"]
[ext_resource type="PackedScene" uid="uid://cinyq7s5lh2pt" path="res://Objects/SprinklerSystem/sprinkler_system.tscn" id="5_yquw4"]

[sub_resource type="Animation" id="Animation_rkmp6"]
resource_name = "blink_red_light"
length = 1.15
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.575, 1.15),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0.53025, 0.55653, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_4aunh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 0, 0.302, 0.216)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_her8n"]
_data = {
"RESET": SubResource("Animation_4aunh"),
"blink_red_light": SubResource("Animation_rkmp6")
}

[node name="CrisisHandler" type="Node2D"]
script = ExtResource("1_h1dux")

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
script = ExtResource("2_65ngm")

[node name="ExplosionSoundPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_iafhy")
pitch_scale = 0.19

[node name="AlarmSoundPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_q55hf")
volume_db = -15.0

[node name="SprinklerSystem" parent="." instance=ExtResource("5_yquw4")]

[node name="RedLight" type="CanvasModulate" parent="."]
color = Color(1, 0, 0.302, 0.216)

[node name="AnimationPlayer" type="AnimationPlayer" parent="RedLight"]
libraries = {
"": SubResource("AnimationLibrary_her8n")
}
autoplay = "blink_red_light"
